Replace Manage Languages with dialog and dropdown item

Remove the sub-page. Add a simple dialog to select new languages. Add an
option to the language list to remove a language.

A search box will be added to the dialog next.

BUG=630982
TEST=SettingsLanguagesPageBrowserTest
R=stevenjb@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2265253002
Cr-Commit-Position: refs/heads/master@{#414246}

Former-commit-id: 9a670d48822912050a3c06bf1f3afb1a01c1e0a3